--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,13 @@
   "files": [],
   "references": [
     { "path": "./tsconfig.node.json" },
-    { "path": "./tsconfig.cloudflare.json" },
+    { "path": "./tsconfig.cloudflare.json" }
   ],
   "compilerOptions": {
     "checkJs": true,
     "verbatimModuleSyntax": true,
     "skipLibCheck": true,
     "strict": true,
-    "noEmit": true,
-  },
+    "noEmit": true
+  }
 }
