--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "dev": "react-router dev",
     "build": "react-router build",
-    "start": "wrangler pages dev ./build/client",
-    "typecheck": "react-router typegen && tsc",
+    "deploy": "npm run build && wrangler deploy",
+    "start": "wrangler dev",
+    "typecheck": "react-router typegen && tsc -b",
     "prettier": "prettier --write --ignore-path .gitignore .",
     "test:e2e": "playwright test",
-    "typegen": "wrangler types",
     "lint": "eslint"
   },
   "dependencies": {
@@ -41,7 +41,8 @@
     "vite-plugin-babel": "^1.3.2"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20260109.0",
+    "@cloudflare/vite-plugin": "^1.20.1",
+    "@cloudflare/workers-types": "^4.20260118.0",
     "@eslint/compat": "^2.0.1",
     "@eslint/js": "^9.39.2",
     "@playwright/test": "^1.57.0",
@@ -49,6 +50,7 @@
     "@tailwindcss/forms": "^0.5.11",
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/node": "^25.0.9",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
     "eslint": "^9.39.2",
