--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "isbot": "^5.1.32",
     "jszip": "^3.10.1",
     "marked": "^17.0.1",
-    "moment-timezone": "^0.6.0",
     "prettier": "^3.7.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.2.3",
@@ -54,6 +53,7 @@
     "@types/node": "^25.0.9",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
+    "date-fns-tz": "^3.2.0",
     "eslint": "^9.39.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-compiler": "^19.1.0-rc.2",
